# tree-analyzer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package.sh
paper/: compile.sh  paper.tex
paper/assets/: create-assets.sh
paper/inputs/: create-inputs.sh
results/: result.txt
scripts/: analyze.sh  bounds.py  create-script.py  extract-data.py  graphs.R  make-graphs.R  make-tables.R  reformat.sh
src/: AVL.c  AVL.h  BST.c  BST.h  constants.c  constants.h  main.c  report.c  report.h
